--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <div class="smile-box">
       <div class="smiled-back-box">
         <h2 id="smiled-back-count">0</h2>
-        <button id="smiled-back-btn" onclick="incrementSmiledBack()">😁😆🤣</button>
+        <button id="smiled-back-btn" onclick="incrementSmiledBack()">😁😆</button>
       </div>
       <div class="not-smiled-back-box">
         <h2 id="not-smiled-back-count">0</h2>
-        <button id="not-smiled-back-btn" onclick="incrementNotSmiledBack()">🥺😒😕</button>
+        <button id="not-smiled-back-btn" onclick="incrementNotSmiledBack()">😒😕</button>
       </div>
     </div>
     <h2 id="smiles-back-percentage">0</h2>
