--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h3>Experience the "Smile Experiment"!</h3>
     <h1>
       😁🤣<br>
-      Smile Counter App<br>😆🤪
+      Smile Counter<br>
+      😆🤪
     </h1>
     <h3>Walk around public places, parks, malls, or busy streets, and smile at random people.</h3>
     <h3>Will they smile back?</h3>
@@ -27,7 +28,7 @@
       </div>
     </div>
     <h2 id="smiles-back-percentage">0</h2>
-    <h1>😁% Smiles Back😁:</h1>
+    <h1>😁Smiles Back😆</h1>
     <p id="total-participants">Total participants: </p>
     <button id="reset-btn" onclick="reset()">RESET</button>
     <h3>Smiling is contagious! It creates positivity, fosters connections, and boosts mood.</h3>
